--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Arash 'Ari'"
-  avatar           : "profile.png"
+  avatar           : "ArashAbbasiLarki.jpg"
   bio              : "Your biography for the left-hand sidebar"
   location         : "Location"
   employer         :
