--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "ARASH ABBASI LARKI"
 title_separator          : "-"
-name                     : &name "Your Name (EDITED)"
+name                     : &name "Arash Abbasi Larki"
 description              : &description "personal description"
 url                      : https://abbrash.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
