--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,10 +3,10 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
+  - title: "Talks and Presentations"
     url: /talks/    
 
-  - title: "Teaching"
+  - title: "Research and Teaching Experiences"
     url: /teaching/    
     
   - title: "Portfolio"
