--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Arash"
   avatar           : "ArashAbbasiLarki.jpg"
-  bio              : "M.Sc student in Mechatronics Engineering at K.N. Toosi University of Technology"
+  bio              : "M.Sc in Mechatronics Engineering at K.N. Toosi University of Technology"
   location         : "Tehran, Iran"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
